# Merge.systems

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  simple.rs
rust/src/api/blockchain/: mod.rs
rust/src/api/http_client/blockchain/: client.rs
rust/src/api/http_client/market/: market_data.rs
rust/src/api/http_client/open_ai/: client.rs  converter.rs  errors.rs
rust/src/api/http_client/xchange/: rest_client.rs  trade_order.rs
rust/src/api/market/: error.rs  indicator.rs  market_data.rs  mod.rs
rust/src/api/open_ai/: converter.rs  errors.rs  mod.rs
rust/src/api/systems/: mod.rs
rust/src/api/systems/blockchain/: verification.rs
rust/src/api/systems/encoder/: hmac.rs
rust/src/api/systems/market/: core.rs  mod.rs
rust/src/api/systems/market_analyser/: indicator.rs  market_data.rs  mod.rs
rust/src/api/systems/scaper/: directory_180.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_merge_ai.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_merge_ai.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+18 files in other folders)
